--- a/src/main/resources/application-horisharding.properties
+++ b/src/main/resources/application-horisharding.properties
@@ -31,11 +31,16 @@ spring.shardingsphere.datasource.order1.password=123456
 spring.shardingsphere.rules.sharding.tables.t_user.actual-data-nodes=user.t_user
 spring.shardingsphere.rules.sharding.tables.t_order.actual-data-nodes=order$->{0..1}.t_order$->{0..1}
 spring.shardingsphere.rules.sharding.tables.t_dict.actual-data-nodes=user.t_dict,order$->{0..1}.t_dict
+spring.shardingsphere.rules.sharding.tables.t_order_item.actual-data-nodes=order$->{0..1}.t_order_item$->{0..1}
 #------------------------分库策略
 # 分片列名称
 spring.shardingsphere.rules.sharding.tables.t_order.database-strategy.standard.sharding-column=user_id
 # 分片算法名称
 spring.shardingsphere.rules.sharding.tables.t_order.database-strategy.standard.sharding-algorithm-name=alg_inline_userid
+# 分片列名称
+spring.shardingsphere.rules.sharding.tables.t_order_item.database-strategy.standard.sharding-column=user_id
+# 分片算法名称
+spring.shardingsphere.rules.sharding.tables.t_order_item.database-strategy.standard.sharding-algorithm-name=alg_inline_userid
 #------------------------分片算法配置
 # 行表达式分片算法
 # 分片算法类型
@@ -48,7 +53,10 @@ spring.shardingsphere.rules.sharding.sharding-algorithms.alg_inline_userid.props
 spring.shardingsphere.rules.sharding.tables.t_order.table-strategy.standard.sharding-column=order_no
 # 分片算法名称
 spring.shardingsphere.rules.sharding.tables.t_order.table-strategy.standard.sharding-algorithm-name=alg_hash_mod
-
+# 分片列名称
+spring.shardingsphere.rules.sharding.tables.t_order_item.table-strategy.standard.sharding-column=order_no
+# 分片算法名称
+spring.shardingsphere.rules.sharding.tables.t_order_item.table-strategy.standard.sharding-algorithm-name=alg_hash_mod
 #------------------------分片算法配置
 # 哈希取模分片算法
 # 分片算法类型
@@ -62,7 +70,10 @@ spring.shardingsphere.rules.sharding.sharding-algorithms.alg_hash_mod.props.shar
 spring.shardingsphere.rules.sharding.tables.t_order.key-generate-strategy.column=id
 # 分布式序列算法名称
 spring.shardingsphere.rules.sharding.tables.t_order.key-generate-strategy.key-generator-name=alg_snowflake
-
+# 分布式序列列名称
+spring.shardingsphere.rules.sharding.tables.t_order_item.key-generate-strategy.column=id
+# 分布式序列算法名称
+spring.shardingsphere.rules.sharding.tables.t_order_item.key-generate-strategy.key-generator-name=alg_snowflake
 # 分布式序列算法配置
 # 分布式序列算法类型
 spring.shardingsphere.rules.sharding.key-generators.alg_snowflake.type=SNOWFLAKE
@@ -70,6 +81,8 @@ spring.shardingsphere.rules.sharding.key-generators.alg_snowflake.type=SNOWFLAKE
 # 分片id是id则可以配置
 #spring.shardingsphere.rules.sharding.key-generators.alg_snowflake.props.xxx=
 
+#--绑定表
+spring.shardingsphere.rules.sharding.binding-tables[0]=t_order,t_order_item
 # 广播表
 spring.shardingsphere.rules.sharding.broadcast-tables[0]=t_dict
 
